# Projet_IA_DELAYE_PAROUTY

./: .gitignore  K-means.ipynb  K-meansRF.ipynb  KmeanRF.ipynb  PANet_FewShot_Segmentation.ipynb  README.md  U-net.ipynb  cGAN.ipynb  pyproject.toml
